--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@grafana/toolkit/src/config/tsconfig.plugin.json",
+  "extends": "../.config/tsconfig.json",
   "include": ["**/*.ts"],
   "compilerOptions": {
     "baseUrl": "../node_modules",
