try most recent e2e package

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["**/*.ts"],
   "compilerOptions": {
     "baseUrl": "../node_modules",
+    "rootDir": "..",
     "types": ["cypress", "@grafana/e2e/cypress/support"]
   }
 }
