--- a/package.json
+++ b/package.json
@@ -20,22 +20,27 @@
     "@grafana/experimental": "^0.0.2-canary.39"
   },
   "devDependencies": {
-    "@types/react": "17.0.42",
-    "@grafana/aws-sdk": "0.0.37",
-    "@grafana/data": "8.0.5",
-    "@grafana/runtime": "8.0.5",
-    "@grafana/toolkit": "8.0.5",
-    "@grafana/ui": "8.5.2",
+    "@grafana/aws-sdk": "^0.0.39",
+    "@grafana/data": "9.2.4",
+    "@grafana/runtime": "9.2.4",
+    "@grafana/toolkit": "9.2.4",
+    "@grafana/ui": "9.2.4",
     "@grafana/e2e": "8.0.5",
     "@grafana/e2e-selectors": "8.0.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/lodash": "latest",
+    "@types/react": "17.0.42",
+    "node-notifier": "10.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-select-event": "^5.3.0",
     "tslib": "2.3.1",
     "cypress": "6.4.0"
   },
   "resolutions": {
-    "rxjs": "6.6.3"
+    "rxjs": "6.6.3",
+    "@types/react": "17.0.52"
+
   }
 }
